--- a/onprem/ui/Dockerfile
+++ b/onprem/ui/Dockerfile
@@ -3,7 +3,7 @@ FROM python:3.9-slim
 WORKDIR /app
 
 # Copy requirements
-COPY requirements.txt .
+COPY onprem/ui/requirements.txt .
 RUN pip install --no-cache-dir -r requirements.txt
 
 # Install additional UI dependencies
