--- a/requirements.txt
+++ b/requirements.txt
@@ -1,10 +1,11 @@
-fastapi==0.104.1
-uvicorn==0.24.0
-python-jose[cryptography]==3.3.0
-requests==2.31.0
-python-multipart==0.0.6
-aiohttp==3.9.1
-cryptography==41.0.5
-pydantic==2.5.2
-python-dotenv==1.0.0
-PyJWT==2.8.0 
+fastapi==0.68.1
+uvicorn==0.15.0
+pyjwt==2.3.0
+cryptography==3.4.7
+pydantic==1.8.2
+prometheus-client==0.12.0
+python-json-logger==2.0.2
+aiohttp==3.8.1
+python-multipart==0.0.5
+python-dotenv==0.19.0
+pyyaml==5.4.1 
